apps/keycloak/templates/ingress.yaml
# 1. LA GATEWAY (La porte d'entrée qui prend l'IP)
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: mirecloud-gateway
  namespace: keycloak
spec:
  gatewayClassName: cilium
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    allowedRoutes:
      namespaces:
        from: Same
---
# 2. LA ROUTE (Le chemin vers Keycloak)
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: keycloak-route
  namespace: keycloak
spec:
  parentRefs:
  - name: mirecloud-gateway
  hostnames:
  - "keycloak.mirecloud.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: keycloak-keycloakx-http  # Nom exact du service créé par Helm
      port: 80
